# RepoMetrics

./: .gitignore  404.html  Cargo.toml  README.md  index.html  main.py  mkdocs.yml  pyproject.toml  requirements.txt  roadmap.md  setup.py
.github/workflows/: check-version.yml  ci.yml  deploy-docs.yml  model-validation.yml  publish.yml
CloneStatus/: index.html
CloneTask/: index.html
GitFleet/: __init__.py  __init__.pyi
GitFleet/models/: __init__.py  __init__.pyi  common.py  common.pyi  repo.py
GitFleet/providers/: __init__.py  base.py  github.py  token_manager.py
GitFleet/utils/: auth.py  converters.py
RepoManager/: index.html
RepoMetrics/: __init__.py  __init__.pyi
docs/: 404.html  index.html  index.md  sitemap.xml  token-management.md
docs/CloneStatus/: index.html
docs/CloneTask/: index.html
docs/GitFleetAPI/: index.html
docs/RepoManager/: index.html
docs/advanced/: performance.md
docs/advanced/datetime-handling/: index.html
docs/advanced/performance/: index.html
docs/api/: index.html
docs/api/blame-commit/: index.html
docs/api/clone-monitoring/: index.html
docs/api/error-handling/: index.html
docs/development/: architecture.md  ci-setup.md  contributing.md  python-rust-bridge.md
docs/development/architecture/: index.html
docs/development/ci-setup/: index.html
docs/development/contributing/: index.html
docs/development/model-validation/: index.html
docs/development/python-rust-bridge/: index.html
docs/development/repo-model-validation/: index.html
docs/examples/basic-usage/: index.html
docs/examples/clone-monitoring/: index.html
docs/examples/github-client/: index.html
docs/examples/pydantic-repo-manager/: index.html
docs/examples/secure-credentials/: index.html
docs/examples/token-manager/: index.html
docs/examples/web-monitor/: index.html
docs/installation/: index.html
docs/migration-guide/: index.html
docs/providers/: github.md  index.html  index.md
docs/providers/github/: index.html
docs/providers/implementation/: index.html
docs/providers/models/: index.html
docs/pydantic-integration/: index.html
docs/quick-start/: index.html
docs/search/: search_index.json
docs/token-management/: index.html
examples/: basic_usage.py  clone_monitoring.py  flask_simple_analysis.py  github_client.py  pydantic_repo_manager.py  quart_simple_analysis.py  simple_analysis.py  token_manager.py
examples/templates/: index.html
src/: lib.rs  repo.rs
src/providers/: common.rs  github.rs  mod.rs
tests/: test_repo_models.py
