[build-system]
requires = ["maturin>=0.13,<2"]
build-backend = "maturin"

[project]
name = "GitFleet"
version = "0.1.0"
description = "GitFleet is a high-performance Python library (powered by Rust) for managing and analyzing Git repositories in bulk. It supports asynchronous cloning, parallel git blame and commit analysis using Rayon, and integrates with GitHub, GitLab, and GitBucket APIs. Designed for large-scale repository analysis, GitFleet handles API token rotation, monitors rate limits, and provides detailed progress tracking across operations."
authors = [
    {name = "Ben", email = "bmeddeb@asu.edu"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "argparse>=1.4.0",
    "asyncio>=3.4.3", # For asynchronous operations
    "black>=22.1.0",
    "isort>=5.10.1",
    "maturin>=0.13,<0.14",
    "pytest>=6.0.0",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Version Control :: Git",
]

[project.urls]
"Homepage" = "https://github.com/bmeddeb/GitFleet"
"Bug Tracker" = "https://github.com/bmeddeb/GitFleet/issues"

[tool.maturin]
python-source = "GitFleet"
module-name = "GitFleet"
manifest-path = "./Cargo.toml"
features = ["pyo3/extension-module"]